# analyst

./: CHANGELOG.md  README.md  Supplementary.md  analysis_20260507_140208.json  analyst.yaml  main.py  pyproject.toml
analyst/: __init__.py  agent.py  chain_builder.py  config.py  enrich.py  evaluator.py  harness.py  insight_engine.py  logging_config.py  query.py  report.py  state.py  stock_holders.py  stock_lhb.py  stock_verify.py
analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: analyst-full-pipeline.md  analyst-workflow.md  clue-chain-architecture.md  clue-chain-implementation-principles.md
tests/: test_agent_loop.py  test_chain_builder.py  test_config_report.py  test_evaluator.py  test_harness.py  test_insight_engine.py  test_self_eval_closed_loop.py  test_state.py
