[project]
name = "analyst"
version = "0.1.0"
description = "财经新闻深度分析引擎 — 从 indexagent 检索数据，LLM 驱动线索链发现与隐蔽信息推导"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "httpx>=0.27",
    "loguru>=0.7",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.30",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
analyst = "main:cli"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
